Add .git ext to repository url

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/HindustanTimesLabs/rohingya-village-fires"
+    "url": "https://github.com/HindustanTimesLabs/rohingya-village-fires.git"
   },
   "author": "Harry Stevens <harryjosephstevens@gmail.com> (http://harryjstevens.com/)",
   "license": "ISC",
